--- a/car_trade_project/ui/src/main/resources/static/index.html
+++ b/car_trade_project/ui/src/main/resources/static/index.html
@@ -283,80 +283,51 @@
 				<div class="col-md-12">
 					<div class="slider-top-features">
 						<div id="owl-top-features" class="owl-carousel owl-theme">
-							<div class="item car-item">
+							<div class="item car-item" v-for="top_car in top_car_list" v-model="top_car_list">
 								<div class="thumb-content">
-									<a href="single_car.html"><img src="assets/images/car_item_1.jpg" alt=""></a>
+									<a href="single_car.html"><img src="top_car.cpic1" alt=""></a>
 								</div>
 								<div class="down-content">
-									<a href="single_car.html"><h4>Perfect Sport Car</h4></a>
-									<span>$36.000</span>
-								</div>
-							</div>
-							<div class="item car-item">
-								<div class="thumb-content">
-									<a href="single_car.html"><img src="assets/images/car_item_2.jpg" alt=""></a>
-								</div>
-								<div class="down-content">
-									<a href="single_car.html"><h4>Perfect Sport Car</h4></a>
-									<span>$36.000</span>
-								</div>
-							</div>
-							<div class="item car-item">
-								<div class="thumb-content">
-									<a href="single_car.html"><img src="assets/images/car_item_3.jpg" alt=""></a>
-								</div>
-								<div class="down-content">
-									<a href="single_car.html"><h4>Perfect Sport Car</h4></a>
-									<span>$36.000</span>
-								</div>
-							</div>
-							<div class="item car-item">
-								<div class="thumb-content">
-									<a href="single_car.html"><img src="assets/images/car_item_4.jpg" alt=""></a>
-								</div>
-								<div class="down-content">
-									<a href="single_car.html"><h4>Perfect Sport Car</h4></a>
-									<span>$36.000</span>
-								</div>
-							</div>
-							<div class="item car-item">
-								<div class="thumb-content">
-									<a href="single_car.html"><img src="assets/images/car_item_5.jpg" alt=""></a>
-								</div>
-								<div class="down-content">
-									<a href="single_car.html"><h4>Perfect Sport Car</h4></a>
-									<span>$36.000</span>
-								</div>
-							</div>
-							<div class="item car-item">
-								<div class="thumb-content">
-									<a href="single_car.html"><img src="assets/images/car_item_6.jpg" alt=""></a>
-								</div>
-								<div class="down-content">
-									<a href="single_car.html"><h4>Perfect Sport Car</h4></a>
-									<span>$36.000</span>
-								</div>
-							</div>
-							<div class="item car-item">
-								<div class="thumb-content">
-									<a href="single_car.html"><img src="assets/images/car_item_1.jpg" alt=""></a>
-								</div>
-								<div class="down-content">
-									<a href="single_car.html"><h4>Perfect Sport Car</h4></a>
-									<span>$36.000</span>
-								</div>
-							</div>
-							<div class="item car-item">
-								<div class="thumb-content">
-									<a href="single_car.html"><img src="assets/images/car_item_2.jpg" alt=""></a>
-								</div>
-								<div class="down-content">
-									<a href="single_car.html"><h4>Perfect Sport Car</h4></a>
-									<span>$36.000</span>
+									<a href="single_car.html"><h4>{{ top_car.cname }}</h4></a>
+									<span>{{ top_car.cprice }}</span>
+                                    <span hidden>{{ top_car.cid }}</span>
 								</div>
 							</div>
 						</div>
 					</div>
+					<script>
+						top_car_list = []
+
+						const owl_top_features_app = {
+							data() {
+								return {
+									top_car_list: top_car_list
+								}
+							},
+							mounted() {
+								axios
+										.get("/index/findTop6Car")
+										// .get("#")
+										.then(response => {
+												for(let i=0; i<response.data.result_list.length; i++){
+													this.top_car_list.push({cid: response.data.result_list[i].cid,
+																       cname: response.data.result_list[i].cname,
+																	   cprice: response.data.result_list[i].cprice,
+																	   cpic1: response.data.result_list[i].cpic1})
+												}
+											// this.top_car_list.push({cid: "123", cname: "猫", cprice:100, cpic1:""});
+											// this.top_car_list.push({cid: "124", cname: "虎", cprice:200, cpic1:""});
+											// this.top_car_list.push({cid: "125", cname: "兔", cprice:300, cpic1:""});
+											// this.top_car_list.push({cid: "126", cname: "虎", cprice:400, cpic1:""});
+
+										})
+										.catch(function (error){
+											alert(error);
+										})
+							}
+						}
+						Vue.createApp(owl_top_features_app).mount("#owl-top-features")
+					</script>
 				</div>
 			</div>
 		</div>
@@ -695,7 +666,7 @@
 						<p> Tel: {{ seller.stel }}</p>
 						<div class="author-rate">
 							<img src="assets/images/user_female.jpg" alt="">
-							<h4><a href="#">Antonio Andreas</a></h4>
+							<h4><a href="#">{{ seller.sname }}</a></h4>
 							<div class="line-dec2"></div>
 						</div>
 					</div>
@@ -712,19 +683,19 @@
 					},
 					mounted() {
 						axios
-							.get("/SellerAPI/getAll")
-							// .get("#")
+							// .get("/SellerAPI/getAll")
+							.get("#")
 							.then(response => {
-								for(let i=0; i<response.data.result_list.length; i++){
-									this.sellers.push({sname: response.data.result_list[i].sname,
-												       sid: response.data.result_list[i].sid,
-													   saddress: response.data.result_list[i].saddress,
-													   stel: response.data.result_list[i].stel})
-								}
-								// this.sellers.push({sname: "lisi", saddress: "虎溪", stel:2018});
-								// this.sellers.push({sname: "dsa", saddress: "猫溪", stel:2019});
-								// this.sellers.push({sname: "456", saddress: "狗溪", stel:2020});
-								// this.sellers.push({sname: "sdadas", saddress: "兔溪", stel:2021});
+							// 	for(let i=0; i<response.data.result_list.length; i++){
+							// 		this.sellers.push({sname: response.data.result_list[i].sname,
+							// 					       sid: response.data.result_list[i].sid,
+							// 						   saddress: response.data.result_list[i].saddress,
+							// 						   stel: response.data.result_list[i].stel})
+							// 	}
+								this.sellers.push({sname: "lisi", saddress: "虎溪", stel:2018});
+								this.sellers.push({sname: "dsa", saddress: "猫溪", stel:2019});
+								this.sellers.push({sname: "456", saddress: "狗溪", stel:2020});
+								this.sellers.push({sname: "sdadas", saddress: "兔溪", stel:2021});
 
 							})
 							.catch(function (error){
