index显示随机9辆车通过测试； seller_car_center.html跳转到single_car.html加了cid

--- a/car_trade_project/ui/src/main/resources/static/index.html
+++ b/car_trade_project/ui/src/main/resources/static/index.html
@@ -528,7 +528,7 @@
 										// .get("#")
 										.then(response => {
 											for(let i=0; i<response.data.result_list.length; i++){
-												this.top_car_list.push({cid: response.data.result_list[i].cid,
+												this.random_car_app.push({cid: response.data.result_list[i].cid,
 															       cname: response.data.result_list[i].cname,
 																   cprice: response.data.result_list[i].cprice,
 																   cpic1: response.data.result_list[i].cpic1,
